--- a/estilos/style.css
+++ b/estilos/style.css
@@ -1,16 +1,25 @@
 * {
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 16px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 16px;
 }
 
 body {
-    background-color: rgb(173, 114, 228);
+  background-color: rgb(173, 114, 228);
+}
+
+img.lado {
+    float: right;
 }
 
 main {
-    background-color: white;
-    width: 500px;
-    margin: auto;
-    padding: 10px;
-    box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.473);
+  background-color: white;
+  width: 700px;
+  margin: auto;
+  padding: 10px;
+  box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.473);
 }
+
+.video {
+    margin-left: 70px;
+}
+
